--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -54,7 +54,7 @@
         android:layout_height="62dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:maxLines="100"
         android:scrollbars="vertical"
         android:text="TextView"
@@ -67,8 +67,8 @@
         android:id="@+id/textView2"
         android:layout_width="110dp"
         android:layout_height="36dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="8dp"
         android:text="@string/timeFrame"
         android:textAlignment="textEnd"
         android:textSize="24sp"
@@ -82,12 +82,12 @@
         android:layout_height="35dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="TextView"
         android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.323"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/descInput" />
 
@@ -135,8 +135,8 @@
 
     <Button
         android:id="@+id/addComment"
-        android:layout_width="72dp"
-        android:layout_height="wrap_content"
+        android:layout_width="66dp"
+        android:layout_height="41dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
